fix: two-line form-field hints cut off

--- a/Frontend/src/app/core-ui-module/styles/material-theme.scss
+++ b/Frontend/src/app/core-ui-module/styles/material-theme.scss
@@ -502,11 +502,6 @@ label .label-secondary {
 .mat-slide-toggle-content {
     color: $textLight;
 }
-// prevent umlauts from cutting off
-.mat-hint,
-.mat-error {
-    line-height: 1.5;
-}
 
 // Show toggle on the right place
 .toggle-reverse {
